...
    'pengadaan_faktur': 'Faktur Kulakan',
    'pengadaan_produk': 'Item Kulakan',
    'stok_opname': 'Detail Stok Opname',
    'sesi_stok_opname': 'Sesi Stok Opname',
    'mutasi_stok': 'Mutasi Stok Antar Outlet',
    'retur_penjualan': 'Retur Penjualan',
    'retur_pembelian': 'Retur Pembelian',
    'produksi': 'Produksi',
    'pemakaian_bahan_baku': 'Pemakaian Bahan Baku',
    'sesi_kas': 'Sesi Kas Kasir',
    'calon_anggota': 'Calon/Pengajuan Member',
    'jenis_identitas_anggota': 'Jenis Identitas Member',
    'pengajuan_limit_member': 'Pengajuan Limit Member',
...
